--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,9 +10,10 @@
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
-        android:name="com.example.quickid.AppApplication"
+        android:name=".AppApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -28,6 +29,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <service
+            android:name=".ContactService"
+            android:exported="false" >
+        </service>
+
+        <activity
+            android:name=".AllContactActivity"
+            android:label="@string/title_activity_all_contact" >
         </activity>
     </application>
 
